test/Fail/RecordWhere2.agda
open import Common.Prelude
open import Common.Product

foo : Nat × Nat
foo = record where
  distraction = 1
  proj₁ = 2
